fix: fix footer visibility

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -48,3 +48,7 @@
     transform: scale(95%);
   }
 }
+
+.footer_hidden {
+  display: none;
+}
