--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -14,6 +14,7 @@
   width: 100%;
   flex-wrap: wrap;
   gap: 15px;
+  align-items: center;
 
   @media (max-width: 530px) {
     flex-direction: column;
